--- a/assets/galerie/numbercakes/numbercakes.html
+++ b/assets/galerie/numbercakes/numbercakes.html
@@ -74,7 +74,7 @@
     <!-- Header -->
     <header class="hero">
       <!-- مسیر لوگوی خودت را اینجا بگذار -->
-      <img class="logo" src="../../../assets/galerie/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
+      <img class="logo" src="../../../assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
       <div class="brand">Les Pâtisseries de Lida</div>
       
 
@@ -90,7 +90,7 @@
     <main class="card" role="main">
       <p class="lead">
 
-        <div class="badge">Number Cakes</div>
+        <h2>Number Cakes</h2>
         Hyper tendance, nos Number Cakes se déclinent sous différentes formes&nbsp;:
         <strong>chiffres, lettres, cercle, cœur</strong>, ou toute autre forme selon vos envies.
       </p>
