--- a/assets/galerie/numbercakes/numbercakes.html
+++ b/assets/galerie/numbercakes/numbercakes.html
@@ -108,6 +108,7 @@
 
       <!-- ******* بخش دو ستونه ******* -->
 <section class="split"> 
+  <div>
       <h2>Tarifs</h2>
       <p>À partir de <strong>5&nbsp;€ la part</strong> (hors personnalisation). Les décorations spécifiques et les impressions alimentaires sont proposées en supplément.</p>
 
@@ -123,9 +124,27 @@
 
       <h2>Portions disponibles</h2>
       <p>Commandes possibles pour <strong>8</strong>, <strong>12</strong>, <strong>15 parts</strong>, et selon certaines formes, <strong>au-delà</strong>.</p>
+  </div>
+  <div>
 
-      <h2>Galerie</h2>
-</section>
+    <div>
+          <!-- تصویر نمونهٔ اصلی -->
+          <div class="media">
+            <!-- مسیر را با عکس خودت عوض کن -->
+            <img src="../../../assets/galerie/numbercakes/nc.jpg" alt="Number cake" loading="lazy">
+          </div>
+
+          <!-- کلمات کلیدی کوچک (اختیاری) -->
+          <div class="cta" style="margin-top:12px">
+            <span class="badge" style="background:#fff;color:var(--navy);border:1px solid var(--border)">Rose ou Bleu</span>
+            <span class="badge" style="background:#fff;color:var(--navy);border:1px solid var(--border)">Chantilly Mascarpone</span>
+            <span class="badge" style="background:#fff;color:var(--navy);border:1px solid var(--border)">Buttercream</span>
+          </div>
+        </div>
+      </section>
+
+      <h2>Quelques réalisations</h2>
+  </div>
       <div class="gallery">
         <!-- مسیر عکس‌ها را به پوشهٔ خودت تغییر بده -->
         <img src="../../../assets/galerie/numbercakes/nc1.jpg" alt="Number cake chiffre 1">
