--- a/assets/galerie/numbercakes/numbercakes.html
+++ b/assets/galerie/numbercakes/numbercakes.html
@@ -131,7 +131,7 @@
           <!-- تصویر نمونهٔ اصلی -->
           <div class="media">
             <!-- مسیر را با عکس خودت عوض کن -->
-            <img src="../../../assets/galerie/numbercakes/nc.jpg" alt="Number cake" loading="lazy">
+            <img src="../../../assets/galerie/numbercakes/nc.png" alt="Number cake" loading="lazy">
           </div>
 
           <!-- کلمات کلیدی کوچک (اختیاری) -->
@@ -144,7 +144,7 @@
       </section>
 
       <h2>Quelques réalisations</h2>
-  </div>
+  
       <div class="gallery">
         <!-- مسیر عکس‌ها را به پوشهٔ خودت تغییر بده -->
         <img src="../../../assets/galerie/numbercakes/nc1.jpg" alt="Number cake chiffre 1">
