--- a/assets/galerie/gender-reveal/gender-reveal.html
+++ b/assets/galerie/gender-reveal/gender-reveal.html
@@ -11,111 +11,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&family=Great+Vibes&display=swap" rel="stylesheet">
 
-  <style>
-    :root{
-      --navy:#1a2238;         /* آبی نفتی */
-      --cream:#fdf6ed;        /* پس‌زمینه */
-      --ink:#0e0e0e;          /* متن اصلی */
-      --accent:#caa24d;       /* طلایی برند */
-      --hover:#b68b2e;        /* هاور طلایی تیره‌تر */
-      --card:#ffffff;         /* کارت سفید */
-      --border:rgba(0,0,0,.08);
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--cream);color:var(--ink);font-family:Inter,system-ui,sans-serif;line-height:1.7}
-    a{text-decoration:none;color:var(--accent);transition:.25s}
-    a:hover{color:var(--hover)}
-    .wrap{max-width:95%; margin:0 auto; padding:22px 10px;}
-
-    /* هدر آبی نفتی با لوگو و برند */
-    header.hero{
-      background:var(--navy); color:#fff; text-align:center;
-      padding:32px 16px 18px; border-bottom:4px solid var(--accent);
-      border-radius:14px 14px 0 0;
-    }
-    .logo{width:170px; height:auto; display:block; margin:0 auto 12px; border-radius:10px}
-    .brand{font-family:'Great Vibes',cursive; font-size:40px; margin:6px 0 2px}
-    .badge{display:inline-block; padding:6px 14px; border-radius:999px; background:var(--accent); color:var(--navy); font-weight:700; font-size:14px}
-
-    /* ناوبری قرصی زیر هدر */
-    .nav-buttons{
-      display:flex; justify-content:center; align-items:center;
-      flex-wrap:wrap; gap:10px; margin:14px auto 0; padding:0 8px; max-width:100%;
-    }
-    .nav-buttons .btn{
-      background:linear-gradient(#ffffff, #f7f3e6);
-      border:2px solid var(--accent); color:#000;
-      border-radius:999px; padding:.55rem 1.2rem;
-      box-shadow:0 0 12px rgba(214,166,58,.35);
-      font-family:'Great Vibes',cursive; font-size:20px;
-      transition:all .25s ease;
-    }
-    .nav-buttons .btn:hover{
-      transform:translateY(-2px);
-      box-shadow:0 0 22px rgba(214,166,58,.55), inset 0 3px 6px rgba(255,255,255,.6);
-      color:var(--navy);
-    }
-
-    /* کارت بدنه */
-    main.card{
-      background:var(--card); border:1px solid var(--border);
-      border-radius:0 0 16px 16px; padding:28px;
-      box-shadow:0 6px 16px rgba(0,0,0,.06);
-    }
-    h2{font-family:'Playfair Display',serif; color:var(--navy); text-align:center; margin:22px 0 10px}
-    p.lead{font-size:18px; text-align:center; color:#1d1d1d; margin:8px auto 18px; max-width:760px}
-    p, ul{max-width:760px; margin:10px auto; font-size:17px}
-    ul{padding-left:20px}
-
-    /* بخش دو ستونه (توضیحات + تصویر) */
-    .split{display:grid; gap:22px; margin-top:8px}
-    @media(min-width:900px){ .split{grid-template-columns:1.1fr .9fr; align-items:center} }
-
-    .note{
-      font-size:14px; color:#555; background:#fff;
-      border:1px dashed #ead9c8; border-radius:14px; padding:12px 14px;
-      max-width:760px; margin:10px auto;
-    }
-
-    /* گالری/مدیا */
-    .media{border-radius:16px; overflow:hidden; border:1px solid var(--border); background:#fffaf6}
-    .media img{width:100%; height:auto; display:block; object-fit:cover}
-    .gallery{display:grid; gap:16px; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); margin-top:16px}
-    .gallery img{width:100%; aspect-ratio:1/1; object-fit:cover; border-radius:14px; border:1px solid var(--border); background:#fff; box-shadow:0 1px 2px rgba(0,0,0,.03)}
-
-    /* دکمه‌های عمومی (CTAها) */
-    .cta{display:flex; justify-content:center; gap:12px; flex-wrap:wrap; margin:22px 0 8px}
-    .btn{
-      display:inline-block; white-space:nowrap; padding:10px 22px; border-radius:999px;
-      background:linear-gradient(#fff7dc,var(--accent));
-      border:2px solid var(--accent); color:var(--navy);
-      font-family:'Great Vibes',cursive; font-size:22px; letter-spacing:.2px;
-      box-shadow:0 0 14px rgba(214,166,58,.45); transition:all .25s ease;
-    }
-    .btn:hover{transform:translateY(-2px); box-shadow:0 0 24px rgba(214,166,58,.7)}
-
-    footer{ text-align:center; color:var(--navy); font-size:14px; margin-top:26px; padding-top:18px; border-top:1px solid var(--border) }
-
-    /* ریسپانسیو */
-    @media (max-width:600px){
-      .brand{font-size:32px}
-      .btn{font-size:20px; padding:9px 18px}
-      .nav-buttons .btn{font-size:19px; padding:.45rem 1rem}
-    }
-  </style>
+  <!-- Styles (تجمیع‌شده) -->
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+  <a id="top"></a>
   <div class="wrap">
     <!-- Header -->
     <header class="hero">
-      <!-- مسیر لوگو را به فایل خودت تغییر بده -->
       <img class="logo" src="../../../assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
       <div class="brand">Les Pâtisseries de Lida</div>
       <div class="badge">Gâteau Gender Reveal</div>
 
-      <!-- ناوبری قرصی -->
-
-        
+      <!-- Navigation -->
       <nav class="nav-buttons" aria-label="Navigation principale">
         <a class="btn" href="../../../index.html">Accueil</a>
         <a class="btn" href="../../../index.html#galerie">Galerie</a>
@@ -125,12 +33,11 @@
 
     <!-- Content -->
     <main class="card" role="main">
-
       <p class="lead">
         Faites de l’annonce du sexe de votre bébé un moment inoubliable. À la découpe, l’intérieur du gâteau dévoile la grande surprise&nbsp;: <strong>rose ou bleu</strong>.
       </p>
 
-      <!-- بخش دو ستونه -->
+      <!-- Split -->
       <section class="split">
         <div>
           <h2>Personnalisation</h2>
@@ -152,14 +59,13 @@
         </div>
 
         <div>
-          <!-- تصویر نمونهٔ اصلی -->
+          <!-- Media -->
           <div class="media">
-            <!-- مسیر را با عکس خودت عوض کن -->
             <img src="../../../assets/galerie/gender-reveal/gr1.jpg" alt="Gâteau Gender Reveal rose et bleu" loading="lazy">
           </div>
 
-          <!-- کلمات کلیدی کوچک (اختیاری) -->
-          <div class="cta" style="margin-top:12px">
+          <!-- Badges -->
+          <div class="cta small-top">
             <span class="badge" style="background:#fff;color:var(--navy);border:1px solid var(--border)">Rose ou Bleu</span>
             <span class="badge" style="background:#fff;color:var(--navy);border:1px solid var(--border)">Chantilly Mascarpone</span>
             <span class="badge" style="background:#fff;color:var(--navy);border:1px solid var(--border)">Buttercream</span>
@@ -169,7 +75,6 @@
 
       <h2>Quelques réalisations</h2>
       <div class="gallery">
-        <!-- مسیرها را با گالری خودت هماهنگ کن -->
         <img src="assets/galerie/gender-reveal/1.jpg" alt="Gender Reveal Cake 1" loading="lazy">
         <img src="assets/galerie/gender-reveal/2.jpg" alt="Gender Reveal Cake 2" loading="lazy">
         <img src="assets/galerie/gender-reveal/3.jpg" alt="Gender Reveal Cake 3" loading="lazy">
@@ -184,5 +89,17 @@
       </footer>
     </main>
   </div>
+
+  <!-- (اختیاری) اگر خواستی دکمهٔ برگشت به بالا را فعال کنی: 
+  <button class="scroll-top" aria-label="Retour en haut" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })">
+    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+      <path d="M12 5l-7 7h14l-7-7zm0 7v7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+  </button>
+  <script>
+    const st=document.querySelector('.scroll-top');
+    window.addEventListener('scroll',()=>{ st.style.display = window.scrollY>400?'flex':'none'; });
+  </script>
+  -->
 </body>
 </html>
