<link rel="stylesheet" href="../../assets/style.css">

--- a/assets/galerie/gender-reveal/gender-reveal.html
+++ b/assets/galerie/gender-reveal/gender-reveal.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&family=Great+Vibes&display=swap" rel="stylesheet">
 
   <!-- Styles (تجمیع‌شده) -->
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="../../assets/style.css">
 </head>
 <body>
   <a id="top"></a>
