--- a/assets/galerie/bento/bento.html
+++ b/assets/galerie/bento/bento.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <!-- ====== SEO پایه (برای هر صفحه پر کن) ====== -->
-  <title><!-- [PAGE_TITLE] مثلا: Gâteau Anniversaire — Les Pâtisseries de Lida --></title>
+  <!-- ====== bento ====== -->
+  <title><!-- bento — Les Pâtisseries de Lida --></title>
   <meta name="description" content="<!-- [PAGE_DESCRIPTION] توضیح کوتاه صفحه 120-160 کاراکتر -->">
 
   <!-- Fonts -->
