--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <p>Choisissez une catégorie pour découvrir nos créations.</p>
 
       <div class="gallery cards">
-        <a class="cat-card" href="galerie-enfants.html">
+        <a class="cat-card" href="assets/galerie/anniversaireenfants/anniversairesenfants.html">
           <img src="assets/galerie/anniversairesenfants/anvenft.png" alt="Gâteaux d'anniversaire pour enfants">
           <h3>Anniversaires Enfants</h3>
         </a>
@@ -106,12 +106,12 @@
           <h3>Number Cake</h3>
         </a>
 
-        <a class="cat-card" href="galerie-bento.html">
+        <a class="cat-card" href="assets/galerie/bento/bento.html">
           <img src="assets/galerie/bento/bento.png" alt="Bento cakes">
           <h3>Bento Cake</h3>
         </a>
 
-        <a class="cat-card" href="galerie-biscuits.html">
+        <a class="cat-card" href="assets/galerie/biscuitperso/biscuitperso.html">
           <img src="assets/galerie/biscuitperso/sable.png" alt="Biscuits personnalisés">
           <h3>Biscuits personnalisés</h3>
         </a>
