--- a/assets/galerie/bento/bento.html
+++ b/assets/galerie/bento/bento.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&family=Great+Vibes&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="assets/css/style.css"><!-- مسیر نسبی را تنظیم کن -->
+  <link rel="stylesheet" href="../../../style.css"><!-- مسیر نسبی را تنظیم کن -->
 
   <!-- Open Graph (اختیاری اما مفید برای اشتراک‌گذاری) -->
   <meta property="og:type" content="website">
