--- a/assets/galerie/bento/bento.html
+++ b/assets/galerie/bento/bento.html
@@ -29,7 +29,7 @@
     <!-- ====== Header مشترک ====== -->
     <header class="hero">
       <!-- مسیر لوگو را متناسب با محل فایل تنظیم کن -->
-      <img class="logo" src="assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
+      <img class="logo" src="../../mainlogo.png" alt="Logo Les Pâtisseries de Lida">
 
       <!-- برند -->
       <div class="brand">Les Pâtisseries de Lida</div>
