--- a/assets/galerie/biscuitperso/biscuitperso.html
+++ b/assets/galerie/biscuitperso/biscuitperso.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&family=Great+Vibes&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="assets/css/style.css"><!-- مسیر نسبی را تنظیم کن -->
+<link rel="stylesheet" href="../../../style.css"><!-- مسیر نسبی را تنظیم کن -->
 
   <!-- Open Graph (اختیاری اما مفید برای اشتراک‌گذاری) -->
   <meta property="og:type" content="website">
@@ -29,7 +29,7 @@
     <!-- ====== Header مشترک ====== -->
     <header class="hero">
       <!-- مسیر لوگو را متناسب با محل فایل تنظیم کن -->
-      <img class="logo" src="assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
+      <img class="logo" src="../../../mainlogo.png" alt="Logo Les Pâtisseries de Lida">
 
       <!-- برند -->
       <div class="brand">Les Pâtisseries de Lida</div>
