--- a/assets/galerie/biscuitperso/biscuitperso.html
+++ b/assets/galerie/biscuitperso/biscuitperso.html
@@ -29,7 +29,7 @@
     <!-- ====== Header مشترک ====== -->
     <header class="hero">
       <!-- مسیر لوگو را متناسب با محل فایل تنظیم کن -->
-      <img class="logo" src="../../../mainlogo.png" alt="Logo Les Pâtisseries de Lida">
+      <img class="logo" src="../../mainlogo.png" alt="Logo Les Pâtisseries de Lida">
 
       <!-- برند -->
       <div class="brand">Les Pâtisseries de Lida</div>
@@ -39,8 +39,8 @@
 
       <!-- ناوبری -->
       <nav class="nav-buttons" aria-label="Navigation principale">
-        <a class="btn" href="index.html">Accueil</a>
-        <a class="btn" href="index.html#galerie">Galerie</a>
+        <a class="btn" href="../../../index.html">Accueil</a>
+        <a class="btn" href="../../../index.html#galerie">Galerie</a>
         <a class="btn" href="contact.html">Contact</a>
       </nav>
     </header>
@@ -50,6 +50,10 @@
       <!-- لید/خلاصهٔ صفحه -->
       <p class="lead">
         <!-- [LEAD] یک جمله معرفی دلنشین دربارهٔ این دسته/صفحه -->
+
+<h2>
+  Les biscuits personnalisés /h2>
+
       </p>
 
       <!-- سکشن دو ستونه (اگر لازم بود) -->
