--- a/assets/galerie/anniversairesenfants/anniversairesenfants.html
+++ b/assets/galerie/anniversairesenfants/anniversairesenfants.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- ====== SEO پایه (برای هر صفحه پر کن) ====== -->
-  <title><!-- [PAGE_TITLE] مثلا: Gâteau Anniversaire — Les Pâtisseries de Lida --></title>
+  <title> Gâteau d'anniversaireles enfants <!-- [PAGE_TITLE] مثلا: Gâteau Anniversaire — Les Pâtisseries de Lida --></title>
   <meta name="description" content="<!-- [PAGE_DESCRIPTION] توضیح کوتاه صفحه 120-160 کاراکتر -->">
 
   <!-- Fonts -->
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&family=Great+Vibes&display=swap" rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="assets/css/style.css"><!-- مسیر نسبی را تنظیم کن -->
+  <link rel="stylesheet" href="../../../style.css"><!-- مسیر نسبی را تنظیم کن -->
 
   <!-- Open Graph (اختیاری اما مفید برای اشتراک‌گذاری) -->
   <meta property="og:type" content="website">
@@ -39,8 +39,8 @@
 
       <!-- ناوبری -->
       <nav class="nav-buttons" aria-label="Navigation principale">
-        <a class="btn" href="index.html">Accueil</a>
-        <a class="btn" href="index.html#galerie">Galerie</a>
+        <a class="btn" href="../../../index.html">Accueil</a>
+        <a class="btn" href="../../../index.html#galerie">Galerie</a>
         <a class="btn" href="contact.html">Contact</a>
       </nav>
     </header>
@@ -50,6 +50,8 @@
       <!-- لید/خلاصهٔ صفحه -->
       <p class="lead">
         <!-- [LEAD] یک جمله معرفی دلنشین دربارهٔ این دسته/صفحه -->
+
+       <h2> Les gâteauxsurmesureet au thème,  pour les enfants </h2>
       </p>
 
       <!-- سکشن دو ستونه (اگر لازم بود) -->
