--- a/assets/galerie/numbercakes/numbercakes.html
+++ b/assets/galerie/numbercakes/numbercakes.html
@@ -155,7 +155,7 @@
       </div>
 
       <div class="cta">
-        <a class="btn" href="mailto:contact@lespatisseriesdelida.fr">Demander un devis</a>
+        <a class="btn" href="mailto:lida2025@lespatisseriesdelida.fr">Demander un devis</a>
         <a class="btn" href="/galerie.html">Voir la galerie</a>
       </div>
 
