--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="#sale" class="btn">Salé</a>
         <a href="#galerie" class="btn">Galerie</a>
         <a href="#contact" class="btn">Contact</a>
-        <a class="btn" href="#">Commander</a>
+        <a class="btn" href="assets/galerie/Contact.html">Commander</a>
       </nav>
     </header>
 
