--- a/assets/galerie/Contact.html
+++ b/assets/galerie/Contact.html
@@ -14,13 +14,13 @@
 <body>
   <div class="wrap">
     <header class="hero">
-      <img class="logo" src="../assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
+      <img class="logo" src="../../assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
       <div class="brand">Les Pâtisseries de Lida</div>
       <div class="badge">Contact & Commande</div>
       <nav class="nav-buttons">
-        <a class="btn" href="../index.html">Accueil</a>
-        <a class="btn" href="../index.html#galerie">Galerie</a>
-        <a class="btn" href="#">Contact</a>
+        <a class="btn" href="../../index.html">Accueil</a>
+        <a class="btn" href="../../index.html#galerie">Galerie</a>
+
       </nav>
     </header>
 
