--- a/assets/galerie/mariage/mariage.html
+++ b/assets/galerie/mariage/mariage.html
@@ -16,7 +16,7 @@
 
   <a href="../../../index.html" class="btn">⟵ Retour</a>
   <a href="#galerie" class="btn">Galerie</a>
-  <a href="../../../index.html#contact" class="btn">Contact</a>
+  <a href="../../Contact.html" class="btn">Contact</a>
     </nav>
   </header>
 
