--- a/assets/galerie/anniversairesenfants/anniversairesenfants.html
+++ b/assets/galerie/anniversairesenfants/anniversairesenfants.html
@@ -29,7 +29,7 @@
     <!-- ====== Header مشترک ====== -->
     <header class="hero">
       <!-- مسیر لوگو را متناسب با محل فایل تنظیم کن -->
-      <img class="logo" src="assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
+      <img class="logo" src="../../assets/mainlogo.png" alt="Logo Les Pâtisseries de Lida">
 
       <!-- برند -->
       <div class="brand">Les Pâtisseries de Lida</div>
@@ -82,7 +82,7 @@
         <div>
           <!-- مدیا اصلی (اختیاری) -->
           <div class="media">
-            <img src="assets/galerie/sample.jpg" alt="<!-- [ALT_TEXT] -->" loading="lazy">
+            <img src="assets/galerie/anniversaireenfants/ge1.jpg" alt="<!-- [ALT_TEXT] -->" loading="lazy">
           </div>
 
           <!-- برچسب‌های کوچک (اختیاری) -->
@@ -96,9 +96,10 @@
       <!-- گالری (اختیاری) -->
       <h2><!-- [H2_GALLERY] Par ex. Quelques réalisations --></h2>
       <div class="gallery">
-        <img src="assets/galerie/placeholder-1.jpg" alt="<!-- [ALT_1] -->" loading="lazy">
-        <img src="assets/galerie/placeholder-2.jpg" alt="<!-- [ALT_2] -->" loading="lazy">
-        <img src="assets/galerie/placeholder-3.jpg" alt="<!-- [ALT_3] -->" loading="lazy">
+        <img src="assets/galerie/anniversairesenfants/ge2.jpg" alt="<!-- [ALT_1] -->" loading="lazy">
+        <img src="assets/galerie/anniversairesenfants/ge2.png" alt="<!-- [ALT_2] -->" loading="lazy">
+        <img src="assets/galerie/anniversairesenfants/ge3.png" alt="<!-- [ALT_3] -->" loading="lazy">
+        <img src="assets/galerie/anniversairesenfants/ge4.png" alt="<!-- [ALT_3] -->" loading="lazy">
       </div>
 
       <!-- دکمه برگشت به بالا -->
