--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#creations" class="btn">Créations</a>
         <a href="#sale" class="btn">Salé</a>
         <a href="#galerie" class="btn">Galerie</a>
-        <a href="#contact" class="btn">Contact</a>
+        <a href="assets/contact.html" class="btn">Contact</a>
         <a class="btn" href="assets/galerie/Contact.html">Commander</a>
       </nav>
     </header>
