--- a/assets/galerie/anniversairesenfants/anniversairesenfants.html
+++ b/assets/galerie/anniversairesenfants/anniversairesenfants.html
@@ -41,7 +41,7 @@
       <nav class="nav-buttons" aria-label="Navigation principale">
         <a class="btn" href="../../../index.html">Accueil</a>
         <a class="btn" href="../../../index.html#galerie">Galerie</a>
-        <a class="btn" href="contact.html">Contact</a>
+        <a class="btn" href="../../contact.html">Contact</a>
       </nav>
     </header>
 
