--- a/assets/galerie/biscuitperso/biscuitperso.html
+++ b/assets/galerie/biscuitperso/biscuitperso.html
@@ -41,7 +41,7 @@
       <nav class="nav-buttons" aria-label="Navigation principale">
         <a class="btn" href="../../../index.html">Accueil</a>
         <a class="btn" href="../../../index.html#galerie">Galerie</a>
-        <a class="btn" href="contact.html">Contact</a>
+        <a class="btn" href="../../contact.html">Contact</a>
       </nav>
     </header>
 
@@ -61,12 +61,15 @@
         <div>
           <h2><!-- [H2_1] --></h2>
           <p><!-- [PARAGRAPH_1] --></p>
+          <p>Pour toute demande de devis, merci d’indiquer&nbsp;:</p>
           <ul>
-            <!-- آیتم‌ها -->
-            <li><!-- [ITEM_1] --></li>
-            <li><!-- [ITEM_2] --></li>
-            <li><!-- [ITEM_3] --></li>
+            <li>le <strong>thème</strong> ;</li>
+            <li>le <strong>modèle</strong> (forme souhaitée) ;</li>
+            <li>le <strong>goût</strong> et la <strong>base</strong> (génoise nature, chocolat ou sablée) ;</li>
+            <li>la <strong>crème</strong> (chantilly mascarpone, ganache, crème diplomate…) ;</li>
+            <li>les <strong>suppléments</strong> gourmands : speculoos, caramel beurre salé, fruits rouges, etc.</li>
           </ul>
+
 
           <h2><!-- [H2_2] --></h2>
           <p><!-- [PARAGRAPH_2] --></p>
