--- a/assets/galerie/anniversairesenfants/anniversairesenfants.html
+++ b/assets/galerie/anniversairesenfants/anniversairesenfants.html
@@ -58,9 +58,12 @@
           <p><!-- [PARAGRAPH_1] --></p>
           <ul>
             <!-- آیتم‌ها -->
-            <li><!-- [ITEM_1] --></li>
-            <li><!-- [ITEM_2] --></li>
-            <li><!-- [ITEM_3] --></li>
+            <li>Pâte àSucre</li>
+            <li>Crème au beurre</li>
+            <li>Ganache auchocolat</li>
+            <li>Crème diplomate</li>
+            <li>Crème chantilly mascarpone</li>
+
           </ul>
 
           <h2><!-- [H2_2] --></h2>
@@ -79,7 +82,7 @@
         <div>
           <!-- مدیا اصلی (اختیاری) -->
           <div class="media">
-            <img src="assets/galerie/anniversaireenfants/ge1.jpg" alt="<!-- [ALT_TEXT] -->" loading="lazy">
+            <img src="assets/galerie/anniversairesenfants/ge4.png" alt="<!-- [ALT_TEXT] -->" loading="lazy">
           </div>
 
           <!-- برچسب‌های کوچک (اختیاری) -->
@@ -93,7 +96,7 @@
       <!-- گالری (اختیاری) -->
       <h2><!-- [H2_GALLERY] Par ex. Quelques réalisations --></h2>
       <div class="gallery">
-        <img src="assets/galerie/anniversairesenfants/ge2.jpg" alt="<!-- [ALT_1] -->" loading="lazy">
+        <img src="anniversairesenfants/ge2.jpg" alt="<!-- [ALT_1] -->" loading="lazy">
         <img src="assets/galerie/anniversairesenfants/ge2.png" alt="<!-- [ALT_2] -->" loading="lazy">
         <img src="assets/galerie/anniversairesenfants/ge3.png" alt="<!-- [ALT_3] -->" loading="lazy">
         <img src="assets/galerie/anniversairesenfants/ge4.png" alt="<!-- [ALT_3] -->" loading="lazy">
